--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="add_product">Add Product</string>
     <string name="add_manufacturer">Add manufacturer</string>
     <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
+    <string name="input_new_name">Input new name</string>
+    <string name="edit_icon">Edit icon</string>
+    <string name="selling_price">Selling Price</string>
+    <string name="summary">Summary</string>
 </resources>
