--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="summary">Summary</string>
     <string name="close_invoice">Close Invoice</string>
     <string name="search">Search</string>
+    <string name="input_new_weight">Set  Weight</string>
+    <string name="reset">Reset</string>
 </resources>
