add excel reports and small UI fixes

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -19,6 +19,8 @@
     <string name="summary">Итог</string>
     <string name="close_invoice">Закрыть накладную</string>
     <string name="search">Поиск</string>
-    <string name="input_new_weight">Set  Weight</string>
-    <string name="reset">Reset</string>
+    <string name="input_new_weight">Задать вес</string>
+    <string name="reset">Сбросить</string>
+    <string name="open">Открыть</string>
+    <string name="export_to_excel">Export to Excel</string>
 </resources>
