--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,4 +23,5 @@
     <string name="reset">Сбросить</string>
     <string name="open">Открыть</string>
     <string name="export_to_excel">Export to Excel</string>
+    <string name="total_summary">Общий итог</string>
 </resources>
