--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="reset">Reset</string>
     <string name="open">Open</string>
     <string name="export_to_excel">Export to Excel</string>
+    <string name="total_summary">Total summary</string>
 </resources>
