--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,4 +26,6 @@
     <string name="total_summary">Общий итог</string>
     <string name="add">Добавить</string>
     <string name="save_success">Сохранено успешно</string>
+    <string name="deleting">Удаление</string>
+    <string name="delete_product">Удалить %s?</string>
 </resources>
