--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -36,4 +36,5 @@
     <string name="main">Главная</string>
     <string name="get_db">Скачать базу данных</string>
     <string name="upload_db">Загрузить базу данных</string>
+    <string name="invoice_closed">Накладная закрыта</string>
 </resources>
