--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -37,4 +37,8 @@
     <string name="get_db">Скачать базу данных</string>
     <string name="upload_db">Загрузить базу данных</string>
     <string name="invoice_closed">Накладная закрыта</string>
+    <string name="close_invoice_question">Closed Invoice?</string>
+    <string name="delete_factory_question">Delete Factory?</string>
+    <string name="confirm">Confirm</string>
+    <string name="delete_closed_invoice_question">Delete Closed Invoice?</string>
 </resources>
